[tool.poetry]
name = "nomade"
version = "0.0.1"
description = "Migration Manager for Humans"
authors = ["Kelvin S. do Prado <kelvinpfw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kelvins/nomade"
 
[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
bumpversion = "^0.5.3"
pytest-cov = "^2.7"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
