[tool.poetry]
name = "nomade"
version = "0.0.1"
description = "Migration Manager for Humans"
authors = ["Kelvin S. do Prado <kelvinpfw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kelvins/nomade"
 
[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
sqlalchemy = "^1.3"
Jinja2 = "=2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
bumpversion = "^0.5.3"
pytest-cov = "^2.7"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
sphinx = "^2.2"
bandit = "^1.6"
coveralls = "=1.8.2"

[tool.poetry.scripts]
nomade = 'nomade.main:cli'

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

